--- a/index.ipynb
+++ b/index.ipynb
@@ -1053,8 +1053,8 @@
    "outputs": [],
    "source": [
     "def street_distance(first_neighbor, second_neighbor):\n",
-    "    |first_neighbor['street'] - second_neighbor['street']| = street_distanc\n",
-    "    return number"
+    "    |first_neighbor['street'] - second_neighbor['street']| = street_distance_num\n",
+    "    return street_distance"
    ]
   },
   {
