--- a/index.ipynb
+++ b/index.ipynb
@@ -1063,22 +1063,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "4"
+       "-4"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "street_distance(fred, natalie) # 4"
+    "street_distance(natalie, fred) # 4"
    ]
   },
   {
