--- a/index.ipynb
+++ b/index.ipynb
@@ -1090,13 +1090,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-15-3ab36431638a>, line 3)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-15-3ab36431638a>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    return |number|\u001b[0m\n\u001b[0m           ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "def avenue_distance(first_neighbor, second_neighbor):\n",
-    "    first_neighbor['avenue'] - second_neighbor['avenue'] = numb\n",
-    "    return"
+    "    first_neighbor['avenue'] - second_neighbor['avenue'] = number\n",
+    "    return |number|"
    ]
   },
   {
