--- a/index.ipynb
+++ b/index.ipynb
@@ -1104,8 +1104,7 @@
    ],
    "source": [
     "def avenue_distance(first_neighbor, second_neighbor):\n",
-    "    first_neighbor['avenue'] - second_neighbor['avenue'] = number\n",
-    "    return |number|"
+    "    first_neighbor['avenue'] - second_neighbor['avenue'] = number\n"
    ]
   },
   {
